--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,63 @@
-/*Fuentes*/
+/* footer*/
 @import url("https://fonts.google.com/share?selection.family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900");
 @import url("https://fonts.google.com/share?selection.family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900|Rubik+Doodle+Shadow");
+.imgRedes {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.footer {
+  background-color: #0361ae;
+  color: #fafafa;
+  padding: 20px 0;
+}
+
+.footerContenido {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.footer h4 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.infoContacto p {
+  margin: 5px 0;
+  font-size: 1.2rem;
+}
+
+.redesSociales a {
+  margin: 5px 0;
+  font-size: 1.2rem;
+  color: #ccc;
+  text-decoration: none;
+  margin-right: 10px;
+  font-size: 1.5rem;
+}
+.redesSociales a:hover {
+  -webkit-background-clip: text;
+          background-clip: text;
+  color: wheat;
+}
+
+.footer i {
+  margin-right: 10px;
+}
+
+/*Fuentes*/
+h2 {
+  font-size: medium;
+}
+
 /*header*/
 .collapse {
   background-image: url(../img/logo.png);
@@ -12,7 +69,7 @@
   text-transform: uppercase;
   font-weight: 700;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .botonChat {
@@ -27,7 +84,7 @@
   color: #0361ae;
 }
 
-iframe {
+.iframe {
   justify-content: center;
   display: flex;
 }
@@ -35,10 +92,39 @@ iframe {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /*BODY*/
 body {
   font-family: "Roboto", sans-serif;
   background-color: transparent;
+}
+
+.card {
+  background-color: #fafafa;
+  border: 1px solid #ccc;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+.card img {
+  max-width: 100%;
+}
+.card p {
+  margin: 10px 0px;
+}
+.card h3 {
+  margin: 10px;
+  font-size: medium;
+}
+.card button {
+  background-color: #0361ae;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-top: 10px;
+}
+.card button:hover {
+  background-color: #28a745;
 }/*# sourceMappingURL=estilo.css.map */
